@@ -22,6 +22,7 @@ import junit.framework.TestCase;
 import org.eclipse.cdt.build.core.scannerconfig.ScannerConfigNature;
 import org.eclipse.cdt.core.CCorePlugin;
 import org.eclipse.cdt.core.index.IIndexManager;
+import org.eclipse.cdt.core.index.IndexerSetupParticipant;
 import org.eclipse.cdt.core.model.ICProject;
 import org.eclipse.cdt.core.testplugin.CProjectHelper;
 import org.eclipse.cdt.debug.core.ICDTLaunchConfigurationConstants;
@@ -58,6 +59,19 @@ import org.osgi.framework.Bundle;
 public abstract class AbstractTest extends TestCase {
 	private static final String BIN_DIR = "Debug"; //$NON-NLS-1$
 	protected ICProject proj;
+	protected IndexerSetupParticipant indexerParticipant;
+	
+	public AbstractTest() {
+		indexerParticipant = new IndexerSetupParticipant() {
+			@Override
+			public boolean postponeIndexerSetup(ICProject project) {
+				// Postpone indexing until project is imported
+				return true;
+			}
+		};
+		
+		CCorePlugin.getIndexManager().addIndexerSetupParticipant(indexerParticipant);
+	}
 	
 	protected ILaunchManager getLaunchManager() {
 		return DebugPlugin.getDefault().getLaunchManager();
@@ -120,10 +134,6 @@ public abstract class AbstractTest extends TestCase {
 		desc.setAutoBuilding(false);
 		wsp.setDescription(desc);
 		
-		// Disable the indexer while the project is being created
-		IIndexManager indexManager = CCorePlugin.getIndexManager();
-		indexManager.setDefaultIndexerId(IIndexManager.ID_NO_INDEXER);
-		
 		ICProject proj = CProjectHelper.createCProject(projname, BIN_DIR);
 		URL location = FileLocator.find(bundle, new Path("resources/" + projname), null); //$NON-NLS-1$
 		File testDir = new File(FileLocator.toFileURL(location).toURI());
@@ -145,12 +155,13 @@ public abstract class AbstractTest extends TestCase {
 		if (!status.isOK()) {
 			throw new CoreException(status);
 		}
-				
+
 		// Project should not be indexed yet
-		assertFalse(indexManager.isProjectIndexed(proj));
+		IIndexManager indexManager = CCorePlugin.getIndexManager();
+		assertTrue(indexManager.isIndexerSetupPostponed(proj));
 		
 		// Re-enable the indexer 
-		indexManager.setDefaultIndexerId(CCorePlugin.DEFAULT_INDEXER);
+		indexerParticipant.notifyIndexerSetup(proj);
 		
 		// Index the project
 		indexManager.reindex(proj);
@@ -201,4 +212,5 @@ public abstract class AbstractTest extends TestCase {
 	protected abstract ILaunchConfigurationType getLaunchConfigType();
 	
 	protected abstract void setProfileAttributes(ILaunchConfigurationWorkingCopy wc) throws CoreException;
+	
 }
